--- a/.github/workflows/flanker.yml
+++ b/.github/workflows/flanker.yml
@@ -38,6 +38,8 @@ jobs:
       run: |
         python3 -m venv .venv
         source .venv/bin/activate
+        echo pwd
+        ls -al
         python3 -m pip install -r pvl/requirements3.txt
         python setup.py bdist_wheel
       shell: bash
